--- a/test.yml
+++ b/test.yml
@@ -4,3 +4,19 @@
     - name: Hello Message
       debug:
         msg: "Hello World2!"
+    - name: Create a JIRA issue
+      ansible.builtin.uri:
+        url: https://jsonplaceholder.typicode.com/posts
+        # user: your_username
+        # password: your_pass
+        method: POST
+        body_format: json
+        body: 
+          title: "automated"
+          body: "bar"
+          userId: 1
+        # force_basic_auth: yes
+        # status_code: 201
+      register: cyberark_auth
+    - debug:
+              var: cyberark_auth.content
