--- a/test.yml
+++ b/test.yml
@@ -40,11 +40,13 @@
       register: list_server
     - debug:
               var: list_server
-    # - name: Transform instances password to dict for easy access
-    #   set_fact: "ec2_instances_passwd_dict={{ ec2_instances_passwd_dict | default({}) | combine({item: ec2_instances_passwd['results'][idx].stdout}) }}"
-    #   # Community AWS Plugin
-    #   # loop: "{{ ec2_instances_info.instances | default([]) | json_query('[].network_interfaces[0].private_ip_address') }}"
-    #   # Amazon AWS Plugin
-    #   loop: "{{ ec2_instances.results | default([]) | json_query('[].tagged_instances[].private_ip') }}"
-    #   loop_control:
-    #     index_var: idx
+    - name: Transform instances password to dict for easy access
+      set_fact: "ec2_instances_passwd_dict={{ ec2_instances_passwd_dict | default({}) | combine({item: list_server['results'][idx].stdout_lines}) }}"
+      # Community AWS Plugin
+      # loop: "{{ ec2_instances_info.instances | default([]) | json_query('[].network_interfaces[0].private_ip_address') }}"
+      # Amazon AWS Plugin
+      loop: "{{ ec2_instances.results | default([]) | json_query('[].tagged_instances[].private_ip') }}"
+      loop_control:
+        index_var: idx
+    - debug:
+              var: ec2_instances_passwd_dict
