--- a/test.yml
+++ b/test.yml
@@ -1,8 +1,11 @@
 - name: Hello World Sample
   hosts: all
   tasks:
-    - name: Call API
-      include_tasks: import_task_test.yml
-      loop: 
-        - test
-        - test2
+    - debug:
+              var: hostvars[inventory_hostname]
+
+    # - name: Call API
+    #   include_tasks: import_task_test.yml
+    #   loop: 
+    #     - test
+    #     - test2
