--- a/test.yml
+++ b/test.yml
@@ -1,10 +1,11 @@
 - name: Hello World Sample
   hosts: all
+  gather_facts: false
   tasks:
     - debug:
               var: hostvars[inventory_hostname]
     - debug:
               var: hostvars[inventory_hostname].groups.all
-    - name: Call API
-      include_tasks: import_task_test.yml
-      loop: "{{ hostvars[inventory_hostname].groups.all }}"
+    # - name: Call API
+    #   include_tasks: import_task_test.yml
+    #   loop: "{{ hostvars[inventory_hostname].groups.all }}"
